[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3", "kaitaiStructCompile.setuptools[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.kaitai]
outputDir = "lime/kaitai"

[tool.kaitai.formats.lime_avml_memory_dump]
path = "log/lime_avml_memory_dump"

[tool.kaitai.repo]
git = "https://github.com/KOLANICH/kaitai_struct_formats.git"
refspec = "lime_avml_memory_dump"
update = true
localPath = "kaitai_struct_formats"
