[metadata]
name = lime
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/lime.py
description = Just a library implementing serialization and deserialization from/into LiME/AVML formats.
long_description = file: ReadMe.md
keywords = LiME, AVML
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = lime, lime.kaitai
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
extras_requires =
	kaitaistruct = kaitaistruct, kaitai.compress
	AVML = snappy
	CLI = plumbum
